--- a/FFmpeg/MainWindow.xaml
+++ b/FFmpeg/MainWindow.xaml
@@ -12,7 +12,8 @@
         WindowStyle="None"
         AllowsTransparency="False"
         Height="600" 
-        Width="800">
+        Width="800"
+        Background="#F8F8F8">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
